@@ -1,3 +1,11 @@
+2012-04-11  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/RcppBDT.h, src/RcppBDT.cpp: Prefix local #define
+	variable with RcppBDT_ to avoid any possivke clashes
+
+	* inst/include/RcppBDT.h, src/RcppBDT.cpp: Remove exception
+	specifications in partial specializations for as and wrap
+
 2011-01-17  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version): bumped to 0.1.0 for first CRAN upload
